Impostazione header e fine nav

--- a/index.html
+++ b/index.html
@@ -7,8 +7,51 @@
     <title>Fluentify</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- HEADER -->
+    <header>
+        <div class="container">
+            <!-- Nav -->
+            <nav>
+                <!-- Logo -->
+                <div class="col logo">
+                    <img src="img/logo.svg" alt="logo">
+                </div>
+                <!-- End Logo -->
+
+                <!-- Menu center -->
+                <div class="col menu-center">
+                    <ul class="menu">
+                        <li><a href="#">Il metodo</a></li>
+                        <li><a href="#">La tecnologia</a></li>
+                        <li><a href="#">Real-life English</a></li>
+                        <li><a href="#">Soluzioni aziendali</a></li>
+                    </ul>
+                </div>
+                <!-- End Menu center -->
+
+                <!-- Menu right -->
+                <div class="col menu-right">
+                    <ul class="menu">
+                        <li><a href="#">Diventa un tutor</a></li>
+                        <li><a class="login" href="#">Login</a></li>
+                        <li><a class="green-button" href="#">Struttura un piano</a></li>
+                    </ul>
+                </div>
+                <!-- End Menu right -->
+            </nav>
+            <!-- End Nav -->
+
+            <!-- Titolo e button -->
+            <div></div>
+            <!-- End Titolo e button -->
+        </div>
+    </header>
+    <!-- END HEADER -->
+
     
 </body>
 </html>
