Fine header: aggiunto titolo e button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             <!-- End Nav -->
 
             <!-- Titolo e button -->
-            <div></div>
+            <div class="title">
+                <h1>Scegli l'inglese studiato per i professionisti</h1>
+                <a class="green-button" href="#">STRUTTURA UN PIANO</a>
+            </div>
             <!-- End Titolo e button -->
         </div>
     </header>
