Fine prima section, impostazione colonne e correzione Clearfix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <!-- Nav -->
-            <nav>
+            <nav class="clearfix">
                 <!-- Logo -->
                 <div class="col logo">
                     <img src="img/logo.svg" alt="logo">
@@ -45,15 +45,50 @@
             </nav>
             <!-- End Nav -->
 
-            <!-- Titolo e button -->
+            <!-- Title e button -->
             <div class="title">
                 <h1>Scegli l'inglese studiato per i professionisti</h1>
                 <a class="green-button" href="#">STRUTTURA UN PIANO</a>
             </div>
-            <!-- End Titolo e button -->
+            <!-- End Title e button -->
         </div>
     </header>
     <!-- END HEADER -->
+
+    <!-- MAIN -->
+    <main>
+        <!-- Start section -->
+        <section class="bg-gray title-section">
+            <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
+            <p class="gray-text">Solo un corso basato sulla Fluency può portare ad una soluzione definitiva concreta.</p>
+        </section>
+        <!-- End section -->
+
+        <!-- Start section -->
+        <section class="clearfix">
+            <div class="container">
+                <!-- Start Column Left -->
+                <div class="col col-left">
+                    <div class="img-container">
+                        <img src="img/profile.svg" alt="Profile">
+                    </div>
+                    
+                </div>
+                <!-- End Column Left -->
+
+                <!-- Start Column Center -->
+                <div class="col col-center"></div>
+                <!-- End Column Center -->
+
+                <!-- Start Column Right -->
+                <div class="col col-right"></div>
+                <!-- End Column Right -->
+            </div>
+        </section>
+        <!-- End section -->
+
+    </main>
+    <!-- END MAIN -->
 
     
 </body>
