Correzioni e aggiunta bordo

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <!-- End section -->
 
         <!-- Start section -->
-        <section class="clearfix">
-            <div class="container">
+        <section class="columns">
+            <div class="clearfix container">
                 <!-- Start Column Left -->
                 <div class="col col-left">
                     <!-- Image -->
