aggiunto button help

--- a/index.html
+++ b/index.html
@@ -127,5 +127,11 @@
     </main>
     <!-- END MAIN -->
 
+    <!-- FOOTER -->
+    <div class="help">
+        <a class="green-button" href="#">HELP</a>
+    </div>
+    <!-- END FOOTER -->
+
 </body>
 </html>
